jcprofiler: use Apache Commons CSV for printing/parsing of CSV files
It's much faster and less error prone than a hand-written parser.
Who would have though?